--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,18 @@
-rootProject.name = "MyBrowser"
-include ':app'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "JunwooBrowser"
+include(":app")
